...
  //set in homescreen widget to show error messages
  void Function(String) showError = (e) {};

  //validating the metrics before sending
  bool validateMetrics() {
    if (waterSource == null || waterSource!.isEmpty) {
      showError("Please select a water source.");
      return false;
    }
    if (location == null) {
      showError("Please select a valid location.");
      return false;
    }
...
